# board-api

./: .env.example  .env.test.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/: PLAN.md  SPEC.md  TDD_PLAN.md  TEXT_MATRIX.md  TUTORIAL.md
app/: main.py
app/core/: settings.py
app/db/: session.py
app/graphql/: schema.py
docker/initdb/: 01-create-test-db.sql
migrations/versions/: ffc3a98c5855_baseline.py
tests/: conftest.py  factories.py
tests/helpers/: __init__.py  graphql.py
tests/integration/: test_create_comment_auth.py  test_graphql_ping.py  test_health.py  test_issues_query.py
tests/unit/: test_factories.py  test_graphql_helper.py
